--- a/24CSR013/day1/index.html
+++ b/24CSR013/day1/index.html
@@ -7,55 +7,84 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>KEC Events</h1>
-        <div class="nav">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Signup</a></li>
-                <li><a href="#">Login</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="body">
-        <div class="upcoming">
-            <div class="title">
-                <h2>Upcoming Events</h1>
-            </div>
-            <div class="posts">
-                <div class="uepost">
-                    <div class="banner">
-                        <img src="images/event1.jpg" alt="Event 1">
-                    </div>
-                    <div class="details">
-                        <h3>Event 1</h3>
-                        <p>Date: 2023-10-01</p>
-                        <p>Location: KEC Auditorium</p>
-                        <p>Description: Join us for an exciting event!</p>
-                        <button class="register">Register</button>
-                    </div>
-                </div>
+    <div>
+        <div class="header">
+
+            <h1 style="padding: 20px; font-family: dm; font-size: 72px;">KEC Events</h1>
+            <div class="nav">
+                <ul>
+                    <li><a href="index.html " class="btn">Home</a></li>
+                    <li><a href="#" class="btn">Signup</a></li>
+                    <li><a href="#" class="btn">Login</a></li>
+
+                </ul>
             </div>
         </div>
-        <div class="info">
-            <div class="announcements">
+        <div class="body">
+            <div class="upcoming">
                 <div class="title">
-                    <h2>Announcements</h2>
+                    <h1>Upcoming Events</h1>
+                </div>
+                <div class="posts">
+                    <div class="uepost">
+                        <div class="banner">
+                            <img src="src/img/postheaders/ph1.png" alt="Event 1" width="100%">
+                        </div>
+                        <div class="details">
+                            <div class="d1">
+                                <div class="posttitle">
+                                    <h1>hACKATHON</h1>
+                                </div>
+                                 <p>Date: 2023-10-01</p>
+                                 <p class="time">Time: 3PM</p>
+                            <p>Location: KEC Auditorium</p>
+                            <p>Description: Join us for an exciting event!</p>
+                            </div>
+                            <div class="d2">
+                                <div class="reg">
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <a href="#">Register Now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="past">
-                <div class="title">
-                    <h2>Past Events</h2>
+            <div class="info">
+                <div class="announcements">
+                    <div class="title">
+                        <h1>Announcements</h1>
+                    </div>
+                    <div class="posts">
+                        <div class="uepost">
+                            <div class="banner">
+                                <img src="src/img/announcementheaders/a1.jpg">
+                            </div>
+                            <div class="ann">
+                                <marquee>The Kongu Convention Center is undergoing revamp, please don't host any events there.</marquee>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ql">
+                    <div class="title">
+                        <h1>Quick Links</h1>
+                    </div>
+                    <div class="posts">
+                        <ul type="none">
+                            <li><a href="https://kongu.ac.in/" style="text-decoration: none; color: black; font-family: dm; padding: 3px;">Official Kongu Website</a></li>
+                            <li><a href="https://kongu.edu" style="text-decoration: none; color: black; font-family: dm; padding: 3px;">Kongu Portal</a></li>
+                            <li><a href="https://docs.google.com/forms" style="text-decoration: none; color: black; font-family: dm; padding: 3px;">Google Forms</a></li>
+                       
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="footer">
-        <p>&copy; 2023 KEC Events. All rights reserved.</p>
-        <div class="socials">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
+        <div class="footer">
+            <p>&copy; 2023 KEC Events. All rights reserved.</p>
         </div>
     </div>
 </body>
