--- a/24CSR013/day1/index.html
+++ b/24CSR013/day1/index.html
@@ -33,7 +33,7 @@
                         <div class="details">
                             <div class="d1">
                                 <div class="posttitle">
-                                    <h1>hACKATHON</h1>
+                                    <h1>Hackathon</h1>
                                 </div>
                                  <p>Date: 2023-10-01</p>
                                  <p class="time">Time: 3PM</p>
